--- a/MindEval.FiveSquare/MindEval.FiveSquare.App/MindEval.FiveSquare.App.csproj
+++ b/MindEval.FiveSquare/MindEval.FiveSquare.App/MindEval.FiveSquare.App.csproj
@@ -99,6 +99,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MamalonResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -117,9 +118,9 @@
       <Project>{20e7e839-568d-4b67-9cd5-00a04da624f7}</Project>
       <Name>MindEval.FiveSquare.Business</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MindEval.FiveSquare.Common\MindEval.FiveSquare.Models.csproj">
+    <ProjectReference Include="..\MindEval.FiveSquare.Common\MindEval.FiveSquare.Common.csproj">
       <Project>{4022b541-3980-4bcf-8752-aa3068cbb03f}</Project>
-      <Name>MindEval.FiveSquare.Models</Name>
+      <Name>MindEval.FiveSquare.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
