--- a/MindEval.FiveSquare/MindEval.FiveSquare.Common/MindEval.FiveSquare.Common.csproj
+++ b/MindEval.FiveSquare/MindEval.FiveSquare.Common/MindEval.FiveSquare.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2A486A07-D434-4DB4-AD83-15F7F454A6CF}</ProjectGuid>
+    <ProjectGuid>{4022B541-3980-4BCF-8752-AA3068CBB03F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MindEval.FiveSquare.Data</RootNamespace>
-    <AssemblyName>MindEval.FiveSquare.Data</AssemblyName>
+    <RootNamespace>MindEval.FiveSquare.Common</RootNamespace>
+    <AssemblyName>MindEval.FiveSquare.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,17 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActiveToken.cs" />
-    <Compile Include="PlaceRepository.cs" />
+    <Compile Include="MamalonaException\MamalonaExceptionMessage.cs" />
+    <Compile Include="Place.cs" />
+    <Compile Include="MamalonaException\MamalonaException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserRepository.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MindEval.FiveSquare.Common\MindEval.FiveSquare.Common.csproj">
-      <Project>{4022b541-3980-4bcf-8752-aa3068cbb03f}</Project>
-      <Name>MindEval.FiveSquare.Common</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
