--- a/MindEval.FiveSquare/MindEval.FiveSquare.Common/MindEval.FiveSquare.Common.csproj
+++ b/MindEval.FiveSquare/MindEval.FiveSquare.Common/MindEval.FiveSquare.Common.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckType.cs" />
     <Compile Include="MamalonaException\MamalonaExceptionMessage.cs" />
     <Compile Include="Place.cs" />
     <Compile Include="MamalonaException\MamalonaException.cs" />
