--- a/MindEval.FiveSquare/MindEval.FiveSquare.Data/MindEval.FiveSquare.Data.csproj
+++ b/MindEval.FiveSquare/MindEval.FiveSquare.Data/MindEval.FiveSquare.Data.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActiveToken.cs" />
+    <Compile Include="CheckRepository.cs" />
     <Compile Include="PlaceRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserRepository.cs" />
